eliminate code warnings, make use of java 17 syntax